<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="splash_screen_image">Splash Screen Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="field_must_not_be_empty">Field must not be empty</string>
    <string name="insert_valid_email">Insert a valid email</string>
    <string name="password_invalid">Password must contain at least:\n- 8 Characters
        \n- 1 Uppercase &amp; 1 Lowercase letter\n- 1 Number \n- 1 Special Character</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="password_not_a_match">Password is not a match</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="closes_at">Closes at  </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appbar_title_dh_foods">Digital House Foods</string>
    <string name="main_dishes">Pratos Principais</string>
</resources>